--- a/test/provision-test-installation.yml
+++ b/test/provision-test-installation.yml
@@ -6,7 +6,7 @@
     caddy_sites:
     - domain: "example.com"
       reverse_proxy: "192.168.50.2"
-      whitelist: &default_whitelist
+      allowlist: &default_allowlist
         - "8.8.8.8/32"
 
   roles:
