--- a/test/Dockerfile-test-ubuntu1804
+++ b/test/Dockerfile-test-ubuntu1804
@@ -6,4 +6,4 @@ ADD . /etc/ansible/roles/caddy
 
 ADD test/ .
 
-RUN ansible-playbook --connection=local $playbook.yml --extra-vars "is_docker='true'"
+RUN ansible-playbook --connection=local $playbook.yml --extra-vars "is_docker='true'" -v
