--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,8 @@
   apt:
     pkg: "apt-transport-https"
     state: "present"
+    update_cache: yes
+    cache_valid_time: 3600
 
 - name: "Add Caddy repository"
   apt_repository:
