--- a/molecule/reverse-proxy/converge.yml
+++ b/molecule/reverse-proxy/converge.yml
@@ -12,6 +12,12 @@
         routes:
           - path: ''
             reverse_proxy_destination: 192.168.50.2
+        redirects:
+          - source: ''
+            target: /
+          - source: '/about-us'
+            target: '/about'
+            code: 401
         allowlist:
           - 8.8.8.8/32
         additional_forwarding_ports:
