--- a/molecule/reverse-proxy/converge.yml
+++ b/molecule/reverse-proxy/converge.yml
@@ -23,3 +23,7 @@
         additional_forwarding_ports:
           - '8080'
           - '1337'
+      - domain: test.com
+        routes:
+          - path: ''
+            reverse_proxy_destination: 192.168.50.1
