--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,9 +8,10 @@ platforms:
     image: geerlingguy/docker-${MOLECULE_DISTRO:-debian11}-ansible:latest
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     privileged: true
     pre_build_image: true
+    cgroupns_mode: host
 provisioner:
   name: ansible
   playbooks:
