--- a/renovate.json
+++ b/renovate.json
@@ -1,33 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>simplificator/renovate-preset"
+  ],
   "assignees": [
     "andyundso"
-  ],
-  "labels": [
-    "dependencies"
-  ],
-  "packageRules": [
-    {
-      "matchCurrentVersion": ">= 1.0.0",
-      "groupName": "all non-major dependencies",
-      "groupSlug": "all-minor-patch",
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ]
-    }
-  ],
-  "schedule": [
-    "before 8am on monday"
-  ],
-  "vulnerabilityAlerts": {
-    "labels": [
-      "security"
-    ],
-    "schedule": "at any time"
-  },
-  "dependencyDashboard": true
+  ]
 }
