--- a/molecule/reverse-proxy/converge.yml
+++ b/molecule/reverse-proxy/converge.yml
@@ -9,6 +9,7 @@
   vars:
     caddy_sites:
       - domain: example.com
+        tls_insecure: false
         routes:
           - path: ''
             reverse_proxy_destination: 192.168.50.2
