Removing wildcard in the ansible role. Wildcards will have to be added when defining the variables

--- a/molecule/reverse-proxy/converge.yml
+++ b/molecule/reverse-proxy/converge.yml
@@ -21,7 +21,7 @@
         allowlist:
           - 8.8.8.8/32
         useragent_blocklist:
-          - amazonbot
+          - "*amazonbot*"
         additional_forwarding_ports:
           - '8080'
           - '1337'
